fix Java 21 deprecations